# languages-coexistence

./: .gitignore  CMakeLists.txt  README.md  errors_i_faced.md  todo
.dropped/rust-lib/: build.rs
.github/workflows/: cmake.yml
c_lib/: CMakeLists.txt
c_lib/include/: cert.h
c_lib/src/: cert.c
cmake/: clang-tidy-all.cmake  toolchain_arm_clang.cmake
grpc-server/: .gitignore  index.js
include/: actions.hpp
proto/: grpc.proto  payload.proto
python_lib/: Pipfile  README.md  app.py  lib.py
rust-cxx-interop/: CMakeLists.txt  Cargo.toml
rust-cxx-interop/src/: lib.rs
rust-lib/src/: lib.rs
rust_lib/: CMakeLists.txt  Cargo.toml  build.rs
rust_lib/src/: lib.rs
src/: client.cpp  server.cpp
